--- a/text/10-conclusion.tex
+++ b/text/10-conclusion.tex
@@ -1,5 +1,6 @@
 \clearpage
 \section*{\hfil ЗАКЛЮЧЕНИЕ \hfil}
+\addcontentsline{toc}{section}{ЗАКЛЮЧЕНИЕ}
 	На основе проведенных экспериментов с генеративными нейросетевыми моделями архитектуры GAN было получено, что они не имеют принципиальных проблем с синтезом изображений, имеющих протяженные пространственные корреляции. Однако, качество синтеза, достигнутое на данный момент, остается невысоким, что оставляет простор для дополнительных исследований в этой области. Для улучшения качества синтезированных текстур можно:
 	
 	\begin{itemize}
