--- a/text/11-supplement.tex
+++ b/text/11-supplement.tex
@@ -1,5 +1,6 @@
 \clearpage
 \section*{\hfil ПРИЛОЖЕНИЕ \hfil}
+\addcontentsline{toc}{section}{ПРИЛОЖЕНИЕ}
 	\subsection*{Приложение 1. Использованные версии пакетов}
 		\begin{itemize}
 			\item Python 3.6
