--- a/text/3-ann.tex
+++ b/text/3-ann.tex
@@ -113,7 +113,16 @@
 			В качестве генератора в \cite{pix2pix, p2p-vessnet} использовалась сеть ``U-Net'' \cite{unet}. Основное отличие сети ``U-Net'' от обычной сети архитектуры ``encoder-decoder'' заключается в наличии прямых связей между сверточными и разверточными слоями. Использование такого типа генератора позволяло увеличить качество синтезируемых изображений. Схемы сетей типа ``U-Net'' и ``Encoder-decoder'' приведены на (Рис. \ref{5-unet-sheme}).
 			
 			\begin{figure}[h!]
-				\centering{\includegraphics[width=0.65\linewidth]{5-GAN/unet-encoder}}
+				\centering{\includegraphics[width=0.5\linewidth]{5-GAN/unet-encoder}}
 				\caption{Схематическое изображение нейросети-генератора.}
 				\label{5-unet-sheme}.
 			\end{figure}
+			
+			Разработанные и использованные в экспериментах архитектуры сетей генератора и дискриминатора были такими:\\
+			Генератор:\\ C[nf]-C[nf*2]-C[nf*4]-C[nf*8]-C[nf*8]-C[nf*8]-C[nf*8]-C[nf*8]-DC[nf*8]-DC[nf*8]-DC[nf*8]-DC[nf*8]-DC[nf*4]-DC[nf*2]-DC[nf]-DC[1]\\
+			Под С[nf] или DC[nf] здесь подразумеваются блоки, состоящие из сверточного или разверточного слоя с указанным числом фильтров, батч-нормализации и функции активации LeakyRELU с коэффициентом 0.2.\\
+			Дискриминатор:\\
+			C[nf]-C[nf*2]-C[nf*4]-C[nf*8]-C[1]\\
+			В дискриминаторе батч-нормализация не применялась.
+			
+			При использовании ``U-Net'', к указанной выше архитектуре генератора добавлялись дополнительные сквозные связи между соответствующими сверточными и разверточными слоями.
