--- a/text/6-optimizer.tex
+++ b/text/6-optimizer.tex
@@ -1,7 +1,7 @@
 \clearpage
 \section{Методы стохастической оптимизации}
 	Для обучения глубоких нейросетей применяется метод обратного распространения ошибки, который позволяет рассчитать градиенты весов, и различные методы стохастической оптимизации. В данной работе для обучения моделей применялось 2 алгоритма оптимизации под названиями ``RMSprop'' и ``Adam''. Оба эти алгоритма являются некоторыми модификациями стохастического градиентного спуска (SGD).
-	\subsection{SGD}
+	\subsection{Стохастический градиентный спуск}
 		Описание стохастического градиентного спуска есть в \cite{sgd}. Стохастический градиентый спуск обновляет каждый параметр путем вычитания градиента целевой функции по соответствующему параметру и умножая его на гиперпараметр $\lambda$ - шаг обучения. Градиент целевой функции подсчитывается не на всем наборе данных, а на его случайном подмножестве.
 		$$ i \sim \mathcal{U}\{1, 2, ..., n\} $$
 		$$ \theta_{t+1} = \theta_t - \lambda \nabla L_i(\theta_t), $$
