--- a/text/7-verification.tex
+++ b/text/7-verification.tex
@@ -1,5 +1,5 @@
 \clearpage
-\section{Оценка качества синтеза}
+\section{Оценка качества синтеза текстур с трендом}
 	После обучения сети, необходимо проверить, что сгенерированные ей изображения действительно имеют искомые характеристики (то есть, содержат искомый тренд). Для этого вводится специальная метрика, которая будет учитывать наличие в изображении тренда интенсивности частиц. Рассмотрим среднюю плотность черных пикселей в некотором окне $\xi_k$, и пройдем этим окном по изображению.
 	$$\xi_k = \frac{1}{H w}{\sum_{i=k}^{k+w} \sum_{j=0}^{H}\left| \frac{x(i, j) - 255}{255} \right|}, $$$$k = \overline{1, W - w} $$
 	
