--- a/text/8-results.tex
+++ b/text/8-results.tex
@@ -1,6 +1,6 @@
 \clearpage
-\section{Результаты}
-	Описанные подходы были реализованы в виде компьютерных программ на языке Python с помощью библиотеки для построения искусственных нейронных сетей Keras \cite{keras}, которая, в свою очередь, использует для расчетов библиотеку Tensorflow \cite{tf}. Использованные версии программных пакетов указаны в Приложении 1. Обучение проводилось на синтетических данных, сгенерированных самостоятельно реализованным генератором. 
+\section{Результаты вычислительных экспериментов}
+	Архитектуры, описанные в пункте 1.4.3, были реализованы в виде компьютерных программ на языке Python с помощью библиотеки для построения искусственных нейронных сетей Keras \cite{keras}, которая, в свою очередь, использует для расчетов библиотеку Tensorflow \cite{tf}. Использованные версии программных пакетов указаны в Приложении 1. Обучение проводилось на синтетических данных, сгенерированных самостоятельно реализованным генератором. 
 	\subsection{Выборки с реализацией одного тренда}
 		\subsubsection{Выборка 1}
 			% sand:trend 2
