--- a/text/diploma.tex
+++ b/text/diploma.tex
@@ -37,12 +37,11 @@
 	\input{7-verification}
 	% Результаты
 	\input{8-results}
-	\addcontentsline{toc}{section}{ВЫВОДЫ}
 	% ВЫВОДЫ
 	\input{9-conclusions}
-	\addcontentsline{toc}{section}{ЗАКЛЮЧЕНИЕ}
 	% ЗАКЛЮЧЕНИЕ
 	\input{10-conclusion}
+	\clearpage
 	\addcontentsline{toc}{section}{СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ}
 	\begin{thebibliography}{99}
 		\bibitem{texture-synthesis-using-CNN} Leon A. Gatys, Alexander S. Ecker, Matthias Bethge: ``Texture Synthesis Using Convolutional Neural Networks'' // arXiv: 1505.07376 [cs.CV], 2015.
@@ -64,6 +63,5 @@
 		\bibitem{tf} Martín Abadi, Ashish Agarwal, Paul Barham, Eugene Brevdo, Zhifeng Chen, Craig Citro, Greg S. Corrado, Andy Davis, Jeffrey Dean, Matthieu Devin, Sanjay Ghemawat, Ian Goodfellow, Andrew Harp, Geoffrey Irving, Michael Isard, Rafal Jozefowicz, Yangqing Jia, Lukasz Kaiser, Manjunath Kudlur, Josh Levenberg, Dan Mané, Mike Schuster, Rajat Monga, Sherry Moore, Derek Murray, Chris Olah, Jonathon Shlens, Benoit Steiner, Ilya Sutskever, Kunal Talwar, Paul Tucker, Vincent Vanhoucke, Vijay Vasudevan, Fernanda Viégas, Oriol Vinyals, Pete Warden, Martin Wattenberg, Martin Wicke, Yuan Yu, and Xiaoqiang Zheng: ``TensorFlow: Large-scale machine learning on heterogeneous systems'', 2015. Software available from http://tensorflow.org/.
 		\bibitem{wgan} Martin Arjovsky, Soumith Chintala, Léon Bottou : ``Wasserstein GAN'' // arXiv: 1701.07875 [stat.ML], 2017
 	\end{thebibliography}
-	\addcontentsline{toc}{section}{ПРИЛОЖЕНИЕ}
 	\input{11-supplement}
 \end{document}
