--- a/text/1-introduction.tex
+++ b/text/1-introduction.tex
@@ -38,7 +38,7 @@
 		\item Параметры $\theta$ находятся из обучающей выборки:
 		$$ \mathcal{L}_{\theta}(D) = \prod_{x \in D} P_{\theta}(x) $$
 		$$ \theta^{*} = \underset{\theta}{\arg\max} \mathcal{L}_{\theta}(D)$$
-		\item Генерируется объект(изображение) из распределения $ P_{\theta^{*}}$
+		\item Генерируется объект (изображение) из распределения $ P_{\theta^{*}}$
 	\end{itemize}
 	
 	Этот подход приводит к проблемам:
@@ -49,3 +49,13 @@
 	\end{itemize}
 	
 	Простой пример объекта со сложным пространством параметров - человеческое лицо. Задачу генерации изображения реалистичного человеческого лица долгое время не могли решить с удовлетворительным качеством. Однако последние достижения в области искусственных нейронных сетей привели к существенному улучшению качества генеративных моделей самого разнообразного типа. В частности, впечатляющие результаты были достигнуты с помощью генеративных состязательных сетей (GAN) \cite{cGAN, cGAN-face, EBGAN, BEGAN}, что мотивирует попытку применения нейросетей этой архитектуры в поставленной задаче.
+	
+	\subsection*{Постановка задачи}
+	
+	Таким образом, для достижения обозначенной во введении цели, поставить задачу работы можно так:
+	
+	\begin{itemize}
+		\item Разработать модифицированные для синтеза описанного множества текстур с трендами архитектуры GAN
+		\item Провести вычислительные эксперименты, связанные с обучением нейросетей (то есть, с решением задач многопараметрической оптимизации)
+		\item Синтезировать с помощью обученных нейросетей новые текстуры и верифицировать их
+	\end{itemize}
