--- a/text/1-introduction.tex
+++ b/text/1-introduction.tex
@@ -1,6 +1,6 @@
 \clearpage
 \section*{\hfil ВВЕДЕНИЕ \hfil}
-	В современной добыче полезных ископаемых активно применяются средства математического моделирования для симуляции процессов, происходящих в пласте. Однако, на данный момент полноценное моделирование не представляется возможным, поэтому используются различные приближенные методы. Для правильной симуляции процессов, происходящих в недрах, необходимо смоделировать саму среду, в которой эти процессы протекают. Обычно, данные о структуре среды доступны только в некотором количестве точек (скважин), в которых непосредственно идет добыча. Предлагается попытаться использовать методы машинного обучения для синтеза модели среды, похожей на природную. В рамках решения этой проблемы возникает задача синтеза текстур с трендами, например, для учета каких-либо пространственных корреляций. 
+	В современной добыче полезных ископаемых активно применяются средства математического моделирования для симуляции процессов, происходящих в пласте. Однако на данный момент полноценное моделирование не представляется возможным, поэтому используются различные приближенные методы. Для правильной симуляции процессов, происходящих в недрах, необходимо смоделировать саму среду, в которой эти процессы протекают. Обычно, данные о структуре среды доступны только в некотором количестве точек (скважин), в которых непосредственно идет добыча. Есть мотивация для попыток использования методов машинного обучения для синтеза моделей среды, похожих на существующие в природе. Так как геологические среды часто имеют пространственно скоррелированные неоднородности, то в рамках решения проблемы синтеза геологоподобной среды возникает задача синтезирования текстур с трендами.
 	
 	Под текстурой с трендом в данном случае понимается изображение, в котором есть изменение некоторой статистической характеристики вдоль одного из направлений. Такими характеристиками, например, могут быть изменение интенсивности появления частиц среды или пористости среды.
 	
@@ -9,7 +9,7 @@
 	Для упрощения задачи, будем в дальнейшем рассматривать множество изображений с трендами, удовлетворяющее следующим ограничениям:
 	
 	\begin{itemize}
-		\item Это монохромные изображения 256 x 256 пикселей
+		\item Монохромные изображения 256 x 256 пикселей
 		\item Изменяющимся свойством является интенсивность появления частиц $\lambda$
 		\item Тренд является линейным и направлен вдоль оси изображения $z_1$: 
 		$ \lambda = \lambda_{init} + k z_1 $
