--- a/text/3-ann.tex
+++ b/text/3-ann.tex
@@ -66,8 +66,8 @@
 	
 			Суть использования двух сетей состоит в том, что они обучаются совместно, конкурируя друг с другом: генератор пытается имитировать целевое распределение, а дискриминатор пытается классифицировать поступающие от генератора и из обучающей выборки изображения на 2 класса: реальные (из изначального распределения $P_X$) и ложные (из $P_{X'}$, т.е. синтезированные генератором).
 			Для дальнейшего рассмотрения введем функцию потерь дискриминатора (например, logloss):
-			$$ l_1 = l(d_{\zeta}(x), 1) \text{ - ошибка 1 рода} $$
-			$$ l_2 = l(d_{\zeta}(x'), 0) \text{ - ошибка 2 рода}$$
+			$$ l_1 = l(d_{\zeta}(x), 1) $$
+			$$ l_2 = l(d_{\zeta}(x'), 0) $$
 			$$ L(X, X') = \frac{1}{2} \mathbb{E}_{X} l_1 + \frac{1}{2} \mathbb{E}_{X'} l_2 = -\frac{1}{2} (\mathbb{E}_{X} \log d_{\zeta}(x) + \mathbb{E}_{X'} \log (1 - d_{\zeta}(x'))) = $$
 			$$ =  -\frac{1}{2} (\mathbb{E}_{X} \log d_{\zeta}(x) + \mathbb{E}_{V} \log (1 - d_{\zeta}(g_{\theta}(v)))) = L(\zeta, \theta) .$$
 			Функция потерь обученного классификатора:
