--- a/text/8-results.tex
+++ b/text/8-results.tex
@@ -1,13 +1,13 @@
 \clearpage
 \section{Результаты вычислительных экспериментов}
-	Архитектуры, описанные в пункте 1.4.3, были реализованы в виде компьютерных программ на языке Python с помощью библиотеки для построения искусственных нейронных сетей Keras \cite{keras}, которая, в свою очередь, использует для расчетов библиотеку Tensorflow \cite{tf}. Использованные версии программных пакетов указаны в Приложении 1. Обучение проводилось на синтетических данных, сгенерированных самостоятельно реализованным генератором. 
+	Архитектуры, описанные в пункте 1.4.3, были реализованы в виде компьютерных программ на языке Python с помощью библиотеки для построения искусственных нейронных сетей Keras \cite{keras}, которая, в свою очередь, использует для расчетов пакет Tensorflow \cite{tf}. Использованные версии программных пакетов указаны в Приложении 1. Обучение проводилось на синтетических данных, сгенерированных самостоятельно реализованным генератором. 
 	\subsection{Выборки с реализацией одного тренда}
 		\subsubsection{Выборка 1}
 			% sand:trend 2
 			Выборка состояла из 3000 обучающих изображений и 500 валидационных. Частицами среды были круги диаметром 7 пикселей. Все изображения содержали в себе различные случайные реализации одного тренда интенсивности
 			$$\lambda(x) = 0.2 + 0.01875x : \lambda_i = 0.2, \quad \lambda_f = 5$$
 			
-			Отличия в параметрах обученных нейросетей указаны в (Таб. \ref{8-sand-trend2-nns}). Для всех обученный моделей параметр $\eta$, отвечающий за баланс между $L_{adv}$ и $L1$ был равен 100.
+			Отличия в параметрах нейросетей указаны в (Таб. \ref{8-sand-trend2-nns}). Для всех обученных моделей параметр $\eta$, отвечающий за баланс между $L_{adv}$ и $L1$, был равен 100.
 			
 			\begin{table}[h!]
 				\begin{center}
@@ -579,7 +579,7 @@
 				\end{center}
 			\end{table}
 			
-			Лучшей по введенной метрике оказалась сеть nf32e10. Однако на этой выборке тоже видно, что сети не смогли распознать тренд и сошлись в локальный минимум средней по выборке интенсивности.
+			Лучшей по введенной метрике оказалась сеть nf32e10. Однако на этой выборке тоже видно, что сети не смогли распознать тренд и сошлись в локальный минимум, примерно соответствующий интенсивности на правом крае.
 			
 			Поскольку все сети былы обучены дважды двумя разными оптимизаторами с одинаковым коэффициентом обучения в течение 10 эпох каждая, то можно провести побочное сравнение между Adam и RMSprop (Таб. \ref{8-adam-rms}).
 			
