Printed diploma + Smirnov presentation changes

--- a/text/1-introduction.tex
+++ b/text/1-introduction.tex
@@ -45,7 +45,7 @@
 	
 	\begin{itemize}
 		\item Пространство параметров $\theta$ может быть огромной размерности
-		\item Известной параметрической модели распределения может вообще не существовать
+		\item Известной параметрической модели распределения может не существовать
 	\end{itemize}
 	
 	Простой пример объекта со сложным пространством параметров - человеческое лицо. Задачу генерации изображения реалистичного человеческого лица долгое время не могли решить с удовлетворительным качеством. Однако последние достижения в области искусственных нейронных сетей привели к существенному улучшению качества генеративных моделей самого разнообразного типа. В частности, впечатляющие результаты были достигнуты с помощью генеративных состязательных сетей (GAN) \cite{cGAN, cGAN-face, EBGAN, BEGAN}, что мотивирует попытку применения нейросетей этой архитектуры в поставленной задаче.
@@ -55,7 +55,7 @@
 	Таким образом, для достижения обозначенной во введении цели, поставить задачу работы можно так:
 	
 	\begin{itemize}
-		\item Разработать модифицированные для синтеза описанного множества текстур с трендами архитектуры GAN
+		\item Разработать модифицированные для синтеза описанного множества текстур с трендами архитектуры нейронных сетей
 		\item Провести вычислительные эксперименты, связанные с обучением нейросетей (то есть, с решением задач многопараметрической оптимизации)
 		\item Синтезировать с помощью обученных нейросетей новые текстуры и верифицировать их
 	\end{itemize}
