--- a/text/8-results.tex
+++ b/text/8-results.tex
@@ -4,7 +4,7 @@
 	\subsection{Выборки с реализацией одного тренда}
 		\subsubsection{Выборка 1}
 			% sand:trend 2
-			Выборка состояла из 3000 обучающих изображений и 500 валидационных. Частицами среды были круги диаметром 7 пикселей. Все изображения содержали в себе различные случайные реализации одного тренда интенсивности
+			Выборка состояла из 3000 обучающих троек, 500 валидационных и 50 тестовых. Частицами среды были круги диаметром 7 пикселей. Все изображения содержали в себе различные случайные реализации одного тренда интенсивности
 			$$\lambda(x) = 0.2 + 0.01875x : \lambda_i = 0.2, \quad \lambda_f = 5$$
 			
 			Отличия в параметрах нейросетей указаны в (Таб. \ref{8-sand-trend2-nns}). Для всех обученных моделей параметр $\eta$, отвечающий за баланс между $L_{adv}$ и $L1$, был равен 100.
@@ -149,7 +149,7 @@
 			Лучшей по введенной метрике оказалась сеть nf32.
 		\subsubsection{Выборка 2}
 			% sand:trend 8
-			Выборка состояла из 6000 обучающих изображений и 316 валидационных. Частицами среды были квадраты стороной 3 пикселя. Все изображения содержали в себе различные случайные реализации одного тренда интенсивности
+			Выборка состояла из 6000 обучающих троек, 316 валидационных и 50 тестовых. Частицами среды были квадраты стороной 3 пикселя. Все изображения содержали в себе различные случайные реализации одного тренда интенсивности
 			$$\lambda(x) = 1 + 0.0546875x: \lambda_i = 1, \quad \lambda_f = 15$$
 			
 			Отличия в параметрах обученных нейросетей указаны в (Таб. \ref{8-sand-trend8-nns}). Во всех обученных моделях в качестве сети-генератора использовалась сеть ``U-Net''.
@@ -293,7 +293,7 @@
 			Лучшей по введенной метрике оказалась сеть nf64e1.
 		\subsubsection{Выборка 3}
 			% dust:trend 1
-			Выборка состояла из 6000 обучающих изображений и 316 валидационных. Частицами среды были единичные пиксели. Все изображения содержали в себе различные случайные реализации одного тренда интенсивности
+			Выборка состояла из 6000 обучающих троек, 316 валидационных и 50 тестовых. Частицами среды были единичные пиксели. Все изображения содержали в себе различные случайные реализации одного тренда интенсивности
 			$$тут формула \lambda(x) = 1 + 0.19140625x: \lambda_i = 1, \quad \lambda_f = 50$$
 			
 			Отличия в параметрах обученных нейросетей указаны в (Таб. \ref{8-dust-trend1-nns}). Во всех обученных моделях в качестве сети-генератора использовалась сеть ``U-Net''. В качестве метода оптимизации использовался Adam.
@@ -439,7 +439,7 @@
 	\subsection{Выборки с реализацией различных трендов}
 		\subsubsection{Выборка 4}
 			% dust: trend 2
-			Выборка состояла из 6000 обучающих изображений и 316 валидационных. Частицами среды были единичные пиксели. Все изображения содержали в себе различные случайные реализации разных трендов интенсивности $\lambda(x)$
+			Выборка состояла из 6000 обучающих троек, 316 валидационных и 50 тестовых. Частицами среды были единичные пиксели. Все изображения содержали в себе различные случайные реализации разных трендов интенсивности $\lambda(x)$:
 			$$ \lambda_{init}, \lambda_{final} \sim \mathcal{U}\{0, 50\}, $$
 			то есть, значения $\lambda_{init}$ и $\lambda_{final}$ для каждого отдельного экземпляра выбирались случайно.
 			
