--- a/text/presentation.tex
+++ b/text/presentation.tex
@@ -25,17 +25,21 @@
 
 \begin{document}
 	\title{Нейросетевой синтез текстур с трендами}
-	\author{Будакян Я. С. \and \break \break Научный руководитель: к. т. н., доцент Грачев Е. А.}
+	\author{Будакян Я. С. \and \break \break Научный руководитель: к.т.н., доцент Грачев Е. А.}
 	\date{Москва, 2017 г.} 
 
 	\maketitle
 
 	\begin{frame}{Введение}
-		Целью работы является попытка применения нейросетевых подходов для синтеза текстур c протяженными корреляциями, то есть изменением некоторой статистической характеристики вдоль одного из направлений (трендом). Из работ[1, 2] видно, что у базовых нейросетевых генеративных моделей есть проблемы в этой области.
+		Геологические среды часто имеют пространственно скоррелированные неоднородности, поэтому при решении проблемы генерирования геологоподобных сред возникает задача синтеза текстур с устойчивыми протяженными корреляциями.
 	\end{frame}
 	
 	\begin{frame}{Введение}
-		Для упрощения задачи, в работе рассматривается множество изображений с трендами, удовлетворяющее следующим ограничениям:
+		Целью работы является попытка применения нейросетевых подходов для синтеза текстур c трендами, то есть с устойчивым изменением некоторой статистической характеристики вдоль одного из направлений.
+	\end{frame}
+	
+	\begin{frame}{Задача и модельные ограничения}
+		Задача: рассмотреть синтез текстур из множества изображений с трендами, являющихся моделью среды, состоящей из отдельных частиц и удовлетворяющих ограничениям:
 		
 		\begin{itemize}
 			\item Это монохромные изображения 256 x 256 пикселей
@@ -46,24 +50,24 @@
 		\end{itemize}
 	\end{frame}
 	
-	\begin{frame}{Введение}
+	\begin{frame}{Пример входных данных}
 		\begin{figure}[h]
 			\centering{\includegraphics[width=\linewidth]{1-introduction/trend-example}}
-			\caption{Пример изображения с трендом, фиксируемого двумя изображениями}
-			\label{1-trend-example}
+			\vfill
+			Пример изображения с трендом, фиксируемого двумя изображениями
 		\end{figure}
 	\end{frame}
 	
-	\begin{frame}{Введение}
+	\begin{frame}{Математическая формализация}
 		Математически задача синтеза текстуры с трендом описывается с помощью вероятностной постановки задачи обучения:
 		\begin{itemize}
 			\item Рассматривается многомерное пространство $X$, содержащее множество всех изображений $x$: $X = \{x\}$
-			\item Есть обучающая выборка, состоящая из текстур с трендами $D = \{x_i\}$
+			\item Есть обучающая выборка, состоящая из текстур с трендами $D = \{x_i\}, D \subset X$
 			\item Считается, что  $D$ задает в $X$ вероятностное распределение $P_X : X \longrightarrow [0,1]$
 		\end{itemize}
 	\end{frame}
 	
-	\begin{frame}{Введение}
+	\begin{frame}{Математическая формализация}
 		Таким образом задача синтеза текстуры из нужного множества сводится к синтезу случайного изображения $x'$ из распределения, близкого к задаваемому обучающей выборкой:
 		$$ P_{X'} \approx P_X, \quad x' \sim X'$$
 	\end{frame}
@@ -84,10 +88,11 @@
 			\item $g_{\theta}(x)$ - сеть, трансформирующая шум в элементы множества $X'$, \textbf{генератор}
 		\end{itemize}
 		Суть использования двух сетей состоит в том, что они обучаются совместно, конкурируя друг с другом.
+		$$ \theta^* = \underset{\theta}{\arg\max} \left[ \underset{\zeta}{\min} L(\zeta, \theta) \right] $$
 	\end{frame}
 	
 	\begin{frame}{GAN}
-		Процесс обучения сети типа GAN принимает следующий вид:
+		Процесс обучения сети GAN принимает следующий вид:
 		\begin{columns}
 			\column{0.5\linewidth}
 			\begin{itemize}
@@ -97,7 +102,7 @@
 			\end{itemize}
 			\column{0.5\linewidth}
 			\begin{figure}
-				\centering{\includegraphics[width=0.75\linewidth]{5-GAN/gan-training}}
+				\centering{\includegraphics[width=\linewidth]{5-GAN/gan-training}}
 			\end{figure}
 		\end{columns}
 	\end{frame}
@@ -111,9 +116,9 @@
 		Построив график $\xi(k)$, можно увидеть, как меняется плотность черных пикселей и прослеживается ли тренд.
 		
 		\begin{figure}[h!]
-			\centering{\includegraphics[width=0.75\linewidth]{7-verification/window}}
-			\caption{Прохождение окном, W, H - размеры изображения, w - ширина окна.}
-			\label{7-window}
+			\centering{\includegraphics[width=\linewidth]{7-verification/window}}
+			\vfill
+			Прохождение окном, W, H - размеры изображения, w - ширина окна
 		\end{figure}
 	\end{frame}
 	
@@ -123,7 +128,8 @@
 		где $\xi_{0k}$ - это $\xi_k$, усредненное по изображениям, содержащим истинный тренд, а $K$ - нормировочный множитель, вводимый для того, чтобы метрики сетей, обученных на разных выборках можно было сравнивать между собой.
 	\end{frame}
 	
-	\begin{frame}{Результаты}
+	\begin{frame}{Результаты синтеза}
+		Выборка 1: 3000 обучающих троек, 50 тестовых
 		\begin{table}
 			\begin{center}
 				\begin{tabular}{p{1.2cm} p{1.2cm} p{1.2cm} p{1.2cm} p{1.2cm} p{1.2cm} p{1.2cm}}
@@ -174,19 +180,21 @@
 					\\
 					\hline
 				\end{tabular}
-				\caption{Примеры синтеза (Выборка 1)}
+				\vfill
+				Примеры синтеза (Выборка 1)
 			\end{center}
 		\end{table}
 	\end{frame}
 	
-	\begin{frame}{Результаты}
+	\begin{frame}{Результаты синтеза}
 		\begin{figure}
-			\centering{\includegraphics[width=\linewidth]{8-results/sand-trend2/results}}
-			\caption{Аппроксимация тренда различными сетями (Выборка 1)}
+			\includegraphics[width=\linewidth]{8-results/sand-trend2/results_cr}
+			\vfill
+			Аппроксимация тренда различными сетями (Выборка 1)
 		\end{figure}
 	\end{frame}
 	
-	\begin{frame}{Результаты}
+	\begin{frame}{Результаты синтеза}
 		\begin{table}[h!]
 			\begin{center}
 				\begin{tabular}{|c|c|c|c|}
@@ -202,13 +210,14 @@
 					nf32 & 32 & 0.14589\\
 					\hline
 				\end{tabular}
-				\caption{Значения метрики для разных сетей (меньше - лучше)}
-				\label{8-sand-trend2-metrics}
+				\vfill
+				Значения метрики для разных сетей (меньше - лучше)
 			\end{center}
 		\end{table}
 	\end{frame}
 	
-	\begin{frame}{Результаты}
+	\begin{frame}{Результаты синтеза}
+		Выборка 2: 6000 обучающих троек, 50 тестовых
 		\begin{table}
 			\begin{center}
 				\begin{tabular}{p{1.2cm} p{1.2cm} p{1.2cm} p{1.2cm} p{1.2cm} p{1.2cm} p{1.2cm}}
@@ -259,19 +268,21 @@
 					\\
 					\hline
 				\end{tabular}
-				\caption{Примеры синтеза (Выборка 2)}
+				\vfill
+				Примеры синтеза (Выборка 2)
 			\end{center}
 		\end{table}
 	\end{frame}
 	
-	\begin{frame}{Результаты}
+	\begin{frame}{Результаты синтеза}
 			\begin{figure}
-				\centering{\includegraphics[width=\linewidth]{8-results/sand-trend8/results}}
-				\caption{Аппроксимация тренда различными сетями (Выборка 2)}
+				\includegraphics[width=\linewidth]{8-results/sand-trend8/results_cr}
+				\vfill
+				Аппроксимация тренда различными сетями (Выборка 2)
 			\end{figure}
 	\end{frame}
 	
-	\begin{frame}{Результаты}
+	\begin{frame}{Результаты синтеза}
 		\begin{table}
 			\begin{center}
 				\begin{tabular}{|c|c|c|}
@@ -287,7 +298,8 @@
 					nf64e1 & 64 & 0.01393\\
 					\hline
 				\end{tabular}
-				\caption{Значения метрики для разных сетей (меньше - лучше)}
+				\vfill
+				Значения метрики для разных сетей (меньше - лучше)
 			\end{center}
 		\end{table}
 	\end{frame}
@@ -295,7 +307,7 @@
 	\begin{frame}{Выводы}
 		\begin{itemize}
 			\item Исследовано применение архитектуры GAN для синтеза текстур с трендами
-			\item Получены результаты синтеза при нескольких наборах гиперпараметров сети на нескольких выборках
+			\item Получены результаты синтезирования при некоторых наборах гиперпараметров сети на нескольких выборках
 			\item Проведено измерение качества генерации для каждого из наборов, используя введенную метрику
 		\end{itemize}
 		Результаты показывают на возможность применения GAN для синтеза текстур с трендами.
@@ -313,6 +325,28 @@
 		 $$ +  \mathbb{E}_{p_{data}(s_1, s_2)} \log (1 - D(s_1, s_2, G(s_1, s_2))) $$
 		 $$ D^* = \underset{D}{\arg\min} L(G^*, D)  $$
 		 $$ G^* = \underset{G}{\arg\min} L(G, D^*)  $$
+	\end{frame}
+	
+	\begin{frame}{Архитектуры G и D}
+		\begin{figure}[h!]
+			\centering{\includegraphics[width=0.8\linewidth]{5-GAN/unet-encoder}}
+			\vfill
+			Схематическое изображение нейросети-генератора
+		\end{figure}
+	\end{frame}
+	
+	\begin{frame}{Архитектуры G и D}
+		Генератор:
+		
+		C[nf]-C[nf*2]-C[nf*4]-C[nf*8]-C[nf*8]-C[nf*8]-C[nf*8]-C[nf*8]-DC[nf*8]-DC[nf*8]-DC[nf*8]-DC[nf*8]-DC[nf*4]-DC[nf*2]-DC[nf]-DC[1]
+		
+		Под С[nf] или DC[nf] здесь подразумеваются блоки, состоящие из сверточного или разверточного слоя с указанным числом фильтров, батч-нормализации и функции активации LeakyRELU с коэффициентом 0.2.
+		
+		Дискриминатор:
+		
+		C[nf]-C[nf*2]-C[nf*4]-C[nf*8]-C[1]
+		
+		В дискриминаторе батч-нормализация не применялась.
 	\end{frame}
 
 \end{document}
