Smirnov & Grachev changes

--- a/text/presentation.tex
+++ b/text/presentation.tex
@@ -31,18 +31,18 @@
 	\maketitle
 
 	\begin{frame}{Введение}
-		Геологические среды часто имеют пространственно скоррелированные неоднородности, поэтому при решении проблемы генерирования геологоподобных сред возникает задача синтеза текстур с устойчивыми протяженными корреляциями.
-	\end{frame}
-	
-	\begin{frame}{Введение}
-		Целью работы является попытка применения нейросетевых подходов для синтеза текстур c трендами, то есть с устойчивым изменением некоторой статистической характеристики вдоль одного из направлений.
+		\begin{itemize}
+			\item Геологические среды часто имеют пространственно скоррелированные неоднородности, поэтому при решении проблемы генерирования геологоподобных сред возникает задача синтеза текстур с устойчивыми протяженными корреляциями.
+		
+			\item Цель работы: применение нейросетевых подходов для синтеза текстур c трендами, т.е. с устойчивым изменением некоторой статистической характеристики вдоль одного из направлений.
+		\end{itemize}
 	\end{frame}
 	
 	\begin{frame}{Задача и модельные ограничения}
 		Задача: рассмотреть синтез текстур из множества изображений с трендами, являющихся моделью среды, состоящей из отдельных частиц и удовлетворяющих ограничениям:
 		
 		\begin{itemize}
-			\item Это монохромные изображения 256 x 256 пикселей
+			\item Монохромные изображения 256 x 256 пикселей
 			\item Изменяющимся свойством является интенсивность появления частиц $\lambda$
 			\item Тренд является линейным и направлен вдоль оси изображения $z_1$: 
 			$ \lambda = \lambda_{init} + k z_1 $
@@ -59,7 +59,7 @@
 	\end{frame}
 	
 	\begin{frame}{Математическая формализация}
-		Математически задача синтеза текстуры с трендом описывается с помощью вероятностной постановки задачи обучения:
+		Математически задача синтеза текстур описывается с помощью вероятностной постановки задачи обучения:
 		\begin{itemize}
 			\item Рассматривается многомерное пространство $X$, содержащее множество всех изображений $x$: $X = \{x\}$
 			\item Есть обучающая выборка, состоящая из текстур с трендами $D = \{x_i\}, D \subset X$
@@ -73,7 +73,7 @@
 	\end{frame}
 	
 	\begin{frame}{GAN}
-		Генеративные состязательные сети были придуманы в 2014 году и достигли больших успехов в задачах синтеза объектов из сложных распределений.
+		Генеративные состязательные сети (GAN - Generative Adversarial Networks) были придуманы в 2014 году и достигли больших успехов в задачах синтеза объектов из сложных распределений.
 		\begin{itemize}
 			\item Переформулируем: $ P_{X'} \approx P_X \Leftrightarrow \rho(P_{X'}, P_X) \longrightarrow \underset{P_{X'}}{\min} $
 			\item $ X' = g_{\theta}(\cdot) \Rightarrow \rho(g_{\theta}(\cdot), P_X) \longrightarrow \underset{\theta}{\min}$
@@ -306,9 +306,10 @@
 	
 	\begin{frame}{Выводы}
 		\begin{itemize}
+			\item Предложен и исследован метод синтеза текстур с трендами
 			\item Исследовано применение архитектуры GAN для синтеза текстур с трендами
 			\item Получены результаты синтезирования при некоторых наборах гиперпараметров сети на нескольких выборках
-			\item Проведено измерение качества генерации для каждого из наборов, используя введенную метрику
+			\item Проведено измерение качества генерации для каждого из наборов
 		\end{itemize}
 		Результаты показывают на возможность применения GAN для синтеза текстур с трендами.
 	\end{frame}
@@ -317,8 +318,8 @@
 		\centering\huge{Спасибо за внимание!}
 	\end{frame}
 	
-	\begin{frame}{Минимизационная задача}
-		Обучение нейронной сети является задачей многопараметрической оптимизации функционала потерь. Для используемых в этой работе сетей данная задача ставится так:
+	\begin{frame}{Задача минимизации}
+		Обучение нейронной сети является задачей многопараметрической минимизации функционала потерь. Для используемых в этой работе сетей данная задача ставится так:
 		 $$ L(G, D) = L_{adv}(G, D) + \eta L1$$
 		 $$L1 = \mathbb{E}_{p_{data}(s_1, s_2, r)} (\parallel r - G(s_1, s_2) \parallel_1)$$
 		 $$ L_{adv}(G, D) = \mathbb{E}_{p_{data}(s_1, s_2, r)}\log D(s_1, s_2, r)+ $$
@@ -340,7 +341,7 @@
 		
 		C[nf]-C[nf*2]-C[nf*4]-C[nf*8]-C[nf*8]-C[nf*8]-C[nf*8]-C[nf*8]-DC[nf*8]-DC[nf*8]-DC[nf*8]-DC[nf*8]-DC[nf*4]-DC[nf*2]-DC[nf]-DC[1]
 		
-		Под С[nf] или DC[nf] здесь подразумеваются блоки, состоящие из сверточного или разверточного слоя с указанным числом фильтров, батч-нормализации и функции активации LeakyRELU с коэффициентом 0.2.
+		Под С[nf] или DC[nf] здесь подразумеваются блоки, состоящие из сверточного или разверточного слоя с указанным числом фильтров, батч-нормализации и функции активации LeakyReLU с коэффициентом 0.2.
 		
 		Дискриминатор:
 		
